--- a/app/views/registers/new.html.haml
+++ b/app/views/registers/new.html.haml
@@ -1,4 +1,5 @@
-.grid-row
-  .column-two-thirds
-    %h1.heading-large New register
-    = render 'form'
+%main.container{role:'main', tabindex: "-1"}
+  .grid-row
+    .column-two-thirds
+      %h1.heading-large New register
+      = render 'form'
