--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -23,7 +23,7 @@
       .grid-row
         .column-two-thirds
           %h2.heading-large What registers are
-          %p Registers are lists of information. Each register is the most reliable list of its kind. For example, the Foreign and Commonwealth Office’s (FCO’s) #{link_to 'country register', 'https://country.register.gov.uk/', target: :blank} is the most accurate and up-to-date list of countries available.
+          %p Registers are lists of information. Each register is the most reliable list of its kind. For example, the Foreign and Commonwealth Office’s (FCO’s) #{link_to 'country register', '/country?phase=beta'} is the most accurate and up-to-date list of countries available.
 
           %h2.heading-large The benefits of registers
           %p Using a register will mean you’re only ever working with one reliable and current source of data. You can focus on building your service rather than checking if the data you’re using from other sources is accurate and trustworthy.
@@ -38,7 +38,7 @@
             %h2.related-items__title Registers you can use
             %ul.related-items__list
               - beta_registers.each do |register|
-                %li= link_to register.register, register._uri, target: :blank
+                %li= link_to register.register, "#{register.register}?phase=beta"
             %h2.related-items__title Upcoming registers
             %ul.related-items__list
               %li
