--- a/app/views/registers/show.html.haml
+++ b/app/views/registers/show.html.haml
@@ -67,6 +67,8 @@
         %h2.heading-small Learn more
         %ul
           %li
+            = link_to "Update history", "#{params[:register]}/entries"
+          %li
             = link_to "Technical documentation", "https://registers-docs.cloudapps.digital", target: :blank
           %li
             = link_to "Create a register", "https://www.gov.uk/guidance/creating-a-register", target: :blank
