Remove CTA button from product page mast head

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,8 +19,8 @@
       = link_to 'Menu', '#proposition-links', class: 'js-header-toggle menu'
       %nav{id: 'proposition-menu'}
         %ul{id: "proposition-links"}
-          %li= link_to 'Using registers', 'https://registers.cloudapps.digital/using-registers'
-          %Li= link_to 'View registers', registers_path
+          %li= link_to 'Using Registers', 'https://registers.cloudapps.digital/using-registers'
+          %li= link_to 'View registers', registers_path
           %li= link_to 'Support', 'https://registers.cloudapps.digital/support'
           %li= link_to 'Documentation', 'https://registers-docs.cloudapps.digital/'
 
