--- a/app/views/registers/index.html.haml
+++ b/app/views/registers/index.html.haml
@@ -16,25 +16,37 @@
         %li.active View registers
 
 %main.container{role:'main', tabindex: "-1"}
-  %h1.heading-large View registers
-
   .grid-row
-    - if params[:phase].present?
-      .column-one-quarter
-        .data
+    .column-two-thirds
+      - if params[:phase].present?
+        - if params[:phase] == 'Ready to use'
+          %h1.heading-large Registers ready for use
           %span.data-item.bold-xxlarge= @registers.size
-          %span.data-item.bold-xsmall= params[:phase]
-    - else
-      .column-one-quarter
-        .data
-          = link_to registers_path(phase: 'Ready to use') do
-            %span.data-item.bold-xxlarge= @registers.where(phase: 'Beta').count
-            %span.data-item.bold-xsmall Registers ready for use
-      .column-one-quarter
-        .data
-          = link_to registers_path(phase: 'In progress') do
-            %span.data-item.bold-xxlarge= @registers.where.not(phase: 'Beta').count
-            %span.data-item.bold-xsmall Registers in progress
+          %details.phase-details{:role => "group"}
+            %summary{"aria-controls" => "details-content-0", "aria-expanded" => "false", :role => "button"}
+              %span.summary When is a register ready?
+            #details-content-0.panel.panel-border-narrow{"aria-hidden" => "true"}
+              %p A register is ready to use once it has a custodian, the fieldnames have been agreed and it meets technical standards by being hosted by the GDS on the open registers platform.
+        - elsif params[:phase] == 'In progress'
+          %h1.heading-large Registers in progress
+          %span.data-item.bold-xxlarge= @registers.size
+          %details.phase-details{:role => "group"}
+            %summary{"aria-controls" => "details-content-0", "aria-expanded" => "false", :role => "button"}
+              %span.summary When is a register in progress?
+            #details-content-0.panel.panel-border-narrow{"aria-hidden" => "true"}
+              %p Registers in progress are not yet ready for use as the structure of the datasets might still change. Those that are nearly ready are open for feedback. The ones up next are in the backlog.
+      - else
+        %h1.heading-large View registers
+        .column-one-quarter
+          .data
+            = link_to registers_path(phase: 'Ready to use') do
+              %span.data-item.bold-xxlarge= @registers.where(phase: 'Beta').count
+              %span.data-item.bold-xsmall Registers ready for use
+        .column-one-quarter
+          .data
+            = link_to registers_path(phase: 'In progress') do
+              %span.data-item.bold-xxlarge= @registers.where.not(phase: 'Beta').count
+              %span.data-item.bold-xsmall Registers in progress
 
   .grid-row
     .column-two-thirds.js-enabled
