Remove tabindex from page wrapper

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -16,7 +16,7 @@
       .column-one-third
         = image_tag "registers-top-image.png", class: "hide-for-small"
 
-%main{role:'main', tabindex: "-1"}
+%main{role:'main'}
   .container
     .product-page-section
       .grid-row
