--- a/app/views/registers/edit.html.haml
+++ b/app/views/registers/edit.html.haml
@@ -1,6 +1,6 @@
 - content_for :page_title, "#{@register.name}"
 
-%main.container{role:'main', tabindex: "-1"}
+%main.container{role:'main'}
   .grid-row
     .column-two-thirds
       %h1.heading-large Editing register
