--- a/app/views/registers/entries.html.haml
+++ b/app/views/registers/entries.html.haml
@@ -14,7 +14,7 @@
       %li.active
         Entries
 
-%main.container{role:'main', tabindex: "-1"}
+%main.container{role:'main'}
   .grid-row
     .column-one-third
       %h1.heading-large Update history
