--- a/app/views/registers/index.html.haml
+++ b/app/views/registers/index.html.haml
@@ -15,7 +15,7 @@
       - else
         %li.active View registers
 
-%main.container{role:'main', tabindex: "-1"}
+%main.container{role:'main'}
   .grid-row
     .column-two-thirds
       - if params[:phase].present?
