--- a/app/views/registers/new.html.haml
+++ b/app/views/registers/new.html.haml
@@ -1,4 +1,4 @@
-%main.container{role:'main', tabindex: "-1"}
+%main.container{role:'main'}
   .grid-row
     .column-two-thirds
       %h1.heading-large New register
