--- a/app/assets/stylesheets/_entries.scss
+++ b/app/assets/stylesheets/_entries.scss
@@ -23,10 +23,14 @@
     display: block;
     font-size: 16px;
     line-height: 1;
-    margin-bottom: 20px;
+    margin: 0 0 20px;
   }
 
   .heading-medium {
     margin-top: 0;
+  }
+
+  tr td:first-of-type {
+    width: 200px;
   }
 }
