--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,10 @@ img {
   max-width: 100%;
 }
 
+.heading-large {
+  margin-top: 0;
+}
+
 .container {
   @extend %site-width-container;
 }
@@ -27,6 +31,15 @@ img {
 // Override purple colour
 a:visited {
   color: $govuk-blue;
+}
+
+.govuk-metadata {
+  font-size: 16px;
+  margin: 45px 0;
+
+  dl {
+    margin-bottom: 0;
+  }
 }
 
 dl {
@@ -65,6 +78,12 @@ dl {
   .heading-large {
     margin-top: 0;
   }
+}
+
+.form-group-wrapper {
+  display: inline-block;
+  margin-right: 30px;
+  width: 300px;
 }
 
 .form-group .form-control {
@@ -112,7 +131,21 @@ $phases: (beta, #f47738),
          (discovery, $discovery-colour),
          (backlog, #2e358b);
 
+.register-data-table {
+  th,
+  td {
+    min-width: 100px;
+    padding-right: 15px;
+  }
+
+  tr td:last-of-type {
+    padding-right: 0;
+  }
+}
+
 .register-status-table {
+  margin-top: 45px;
+
   td,
   th {
     font-size: 16px;
@@ -205,6 +238,10 @@ $phases: (beta, #f47738),
   a {
     display: block;
     text-decoration: none;
+
+    .bold-xsmall {
+      text-decoration: underline;
+    }
   }
 }
 
