--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,13 +2,13 @@
 = content_for :body_classes, 'home-page'
 
 .masthead
+  .breadcrumbs.breadcrumbs--inverse{"data-module" => "track-click"}
+    %ol
+      %li
+        = link_to "Components", "https://www.gov.uk/service-toolkit", target: :blank
+      %li.active
+        GOV.UK Registers
   .container
-    .breadcrumbs.breadcrumbs--inverse{"data-module" => "track-click"}
-      %ol
-        %li
-          = link_to "Components", "https://www.gov.uk/service-toolkit", target: :blank
-        %li.active
-          GOV.UK Registers
     .grid-row
       .column-two-thirds
         %h1.heading-xlarge Build services using accurate and up-to-date data
@@ -16,44 +16,43 @@
       .column-one-third
         = image_tag "registers-top-image.png", class: "hide-for-small"
 
-%main{role:'main'}
-  .container
-    .product-page-section
-      .grid-row
-        .column-two-thirds
-          %h2.heading-large What registers are
-          %p Registers are lists of information. Each register is the most reliable list of its kind. For example, the Foreign and Commonwealth Office’s (FCO’s) #{link_to 'country register', '/country?phase=beta'} is the most accurate and up-to-date list of countries available.
+%main#content{role:'main'}
+  .product-page-section
+    .grid-row
+      .column-two-thirds
+        %h2.heading-large What registers are
+        %p Registers are lists of information. Each register is the most reliable list of its kind. For example, the Foreign and Commonwealth Office’s (FCO’s) #{link_to 'country register', '/country?phase=beta'} is the most accurate and up-to-date list of countries available.
 
-          %h2.heading-large The benefits of registers
-          %p Using a register will mean you’re only ever working with one reliable and current source of data. You can focus on building your service rather than checking if the data you’re using from other sources is accurate and trustworthy.
-          %p Visit the #{link_to 'registers page', registers_path} to see all of the registers that are #{link_to 'available to use', '/registers?phase=Ready+to+use', target: :blank} now.
+        %h2.heading-large The benefits of registers
+        %p Using a register will mean you’re only ever working with one reliable and current source of data. You can focus on building your service rather than checking if the data you’re using from other sources is accurate and trustworthy.
+        %p Visit the #{link_to 'registers page', registers_path} to see all of the registers that are #{link_to 'available to use', '/registers?phase=Ready+to+use', target: :blank} now.
 
-          %h2.heading-large Getting started
-          %p Registers can also help you if you collect, manage or store data for your organisation. We’ve made it really simple to find out how custodians and the GOV.UK Registers team work together to #{link_to 'create a register', 'https://www.gov.uk/guidance/creating-a-register', target: :blank}.
-          %p Each register has an open API you can use to access the data without any authentication. There’s more information about using the register APIs in the #{link_to 'technical documentation', 'https://registers-docs.cloudapps.digital/', target: :blank}.
+        %h2.heading-large Getting started
+        %p Registers can also help you if you collect, manage or store data for your organisation. We’ve made it really simple to find out how custodians and the GOV.UK Registers team work together to #{link_to 'create a register', 'https://www.gov.uk/guidance/creating-a-register', target: :blank}.
+        %p Each register has an open API you can use to access the data without any authentication. There’s more information about using the register APIs in the #{link_to 'technical documentation', 'https://registers-docs.cloudapps.digital/', target: :blank}.
 
-        .column-one-third
-          %aside.related-items
-            %h2.related-items__title Registers you can use
-            %ul.related-items__list
-              - beta_registers.each do |register|
-                %li= link_to register.register, "#{register.register}?phase=beta"
-            %h2.related-items__title Upcoming registers
-            %ul.related-items__list
-              %li
-                = link_to 'View all registers in progress', registers_path
-            %h2.related-items__title Suggest a register
-            %ul.related-items__list
-              %li
-                = link_to 'Find out more', 'https://registers.cloudapps.digital/new-register'
+      .column-one-third
+        %aside.related-items
+          %h2.related-items__title Registers you can use
+          %ul.related-items__list
+            - beta_registers.each do |register|
+              %li= link_to register.register, "#{register.register}?phase=beta"
+          %h2.related-items__title Upcoming registers
+          %ul.related-items__list
+            %li
+              = link_to 'View all registers in progress', registers_path
+          %h2.related-items__title Suggest a register
+          %ul.related-items__list
+            %li
+              = link_to 'Find out more', 'https://registers.cloudapps.digital/new-register'
 
-    .product-page-section
-      .grid-row
-        .column-one-half
-          %h2.heading-large Get in touch
-          %p
-            = link_to "Contact the team", "https://registers.cloudapps.digital/support"
-            if you have any questions about using GOV.UK Registers or integrating it with your service.
-          %p GOV.UK Registers is built and supported by a full time team at the Government Digital Service.
-        .column-one-half
-          = image_tag "registers-team.png"
+  .product-page-section
+    .grid-row
+      .column-one-half
+        %h2.heading-large Get in touch
+        %p
+          = link_to "Contact the team", "https://registers.cloudapps.digital/support"
+          if you have any questions about using GOV.UK Registers or integrating it with your service.
+        %p GOV.UK Registers is built and supported by a full time team at the Government Digital Service.
+      .column-one-half
+        = image_tag "registers-team.png"
