--- a/app/views/registers/index.html.haml
+++ b/app/views/registers/index.html.haml
@@ -1,21 +1,20 @@
 - content_for :page_title, 'Registers'
 
-.container
-  .breadcrumbs{"data-module" => "track-click"}
-    %ol
+.breadcrumbs{"data-module" => "track-click"}
+  %ol
+    %li
+      = link_to "Components", "https://www.gov.uk/service-toolkit", target: :blank
+    %li
+      = link_to 'GOV.UK Registers', root_path
+    - if params[:phase].present?
       %li
-        = link_to "Components", "https://www.gov.uk/service-toolkit", target: :blank
-      %li
-        = link_to 'GOV.UK Registers', root_path
-      - if params[:phase].present?
-        %li
-          = link_to 'Register pipeline', registers_path
-        %li.active
-          = params[:phase]
-      - else
-        %li.active View registers
+        = link_to 'Register pipeline', registers_path
+      %li.active
+        = params[:phase]
+    - else
+      %li.active View registers
 
-%main.container{role:'main'}
+%main#content{role:'main'}
   .grid-row
     .column-two-thirds
       - if params[:phase].present?
@@ -37,16 +36,17 @@
               %p Registers in progress are not yet ready for use as the structure of the datasets might still change. Those that are nearly ready are open for feedback. The ones up next are in the backlog.
       - else
         %h1.heading-large View registers
-        .column-one-quarter
-          .data
-            = link_to registers_path(phase: 'Ready to use') do
-              %span.data-item.bold-xxlarge= @registers.where(phase: 'Beta').count
-              %span.data-item.bold-xsmall Registers ready for use
-        .column-one-quarter
-          .data
-            = link_to registers_path(phase: 'In progress') do
-              %span.data-item.bold-xxlarge= @registers.where.not(phase: 'Beta').count
-              %span.data-item.bold-xsmall Registers in progress
+        .grid-row
+          .column-one-third
+            .data
+              = link_to registers_path(phase: 'Ready to use') do
+                %span.data-item.bold-xxlarge= @registers.where(phase: 'Beta').count
+                %span.data-item.bold-xsmall Registers ready for use
+          .column-one-third
+            .data
+              = link_to registers_path(phase: 'In progress') do
+                %span.data-item.bold-xxlarge= @registers.where.not(phase: 'Beta').count
+                %span.data-item.bold-xsmall Registers in progress
 
   .grid-row
     .column-two-thirds.js-enabled
